Fix padding on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -303,7 +303,7 @@ footer {
   }
 
   article {
-    padding: 10rem 5rem;
+    padding: 5rem;
   }
 
   .projects {
